[package]
name = "fil_hello_world_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
fvm_sdk = { version = "1.0.0-rc.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_shared = { version = "0.7.0", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"

[dev-dependencies]
fvm = { version = "1.0.0-rc.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_sdk = { version = "1.0.0-rc.1", git = "https://github.com/filecoin-project/ref-fvm"  }
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.35.2"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"